# Covenant_Enterprise_V5.0

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CORRECTIONS_APPLIED.md  DEPLOYMENT_GUIDE.md  Makefile  PROJECT_SUMMARY.txt  README.md  SECURITY.md  ULTIMATE_SUMMARY.md  V6_UPGRADE_SUMMARY.md  add_advanced_modules.py  covenant_enterprise_v3.0-LICENSE  covenant_enterprise_v3.0-Makefile  covenant_enterprise_v3.0-backend-Dockerfile  docker-compose.full.yml  docker-compose.ultimate.yml  docker-compose.yml  finalize_project.py  generate_all_files.py  pyproject.toml
.github/: dependabot.yml
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-full.txt  requirements.txt
backend/covenant/: test_engine.py
backend/scripts/: benchmark.py  seed_data.py
backend/src/covenant/: __init__.py  config.py  main.py
backend/src/covenant/api/: admin_routes.py  auth_routes.py  enterprise_routes.py  main.py  routes.py  ultimate_api.py
backend/src/covenant/blockchain/: advanced_blockchain.py  audit_trail.py
backend/src/covenant/core/: constitutional_engine.py  engine.py  ultimate_engine.py
backend/src/covenant/db/: session.py
backend/src/covenant/llm/: integration.py
backend/src/covenant/ml/: bias_detector.py  explainability.py  neural_verifier.py
backend/src/covenant/monitoring/: alerts.py  metrics.py
backend/src/covenant/utils/: config.py  logging_config.py
backend/tests/: test_engine.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  QUICKSTART.md
frontend/: Dockerfile  index.html  next.config.js  (+3 more)
(+29 files in other folders)
