[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covenant-enterprise"
version = "5.0.0"
description = "Ultimate Constitutional AI Platform"
authors = [{name = "COVENANT.AI Team"}]
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
